kqed_dev4/src/objects/Package_Item__c.object
<CustomObject>
    <fields>
        <fullName>Item_Premium_Benefit_Code__c</fullName>
        <formula>Item__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Premium/Benefit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Packages</relationshipLabel>
        <relationshipName>Packages_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Packages_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Package/Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Package__c</columns>
        <columns>Item__c</columns>
        <columns>Item_Premium_Benefit_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PI-{0000000000}</displayFormat>
        <label>Package/Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packages/Items</pluralLabel>
    <recordTypes>
        <fullName>Package_Item</fullName>
        <active>true</active>
        <label>Package/Item</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>